--- a/ProductDataWarehouse/NewContent/css/style.css
+++ b/ProductDataWarehouse/NewContent/css/style.css
@@ -297,7 +297,8 @@ span.btn11                                 { padding:6px 15px; color:#FFFFFF; cu
 .main_inner1_content_lt_top h3              { background:#fff; padding:16px 0 16px 25px;font-size:18px; color:#454545; font-family: 'Conv_Helvetica-Light'; }
 .main_inner1_content_lt_top h3 span         { background:url(../images/filter.jpg) no-repeat left center; display:inline-block; width:25px; height:21px; padding-right:3px;}                            
 .main_inner1_content_lt_btm                 { width:265px;  float:left; display:block; background:#f7f9f9; -moz-box-shadow:3px 3px 3px 0  #a8aaad; -webkit-box-shadow:3px 3px 3px 0  #a8aaad; box-shadow:3px 3px 3px 0  #a8aaad; position:relative; z-index:1;  padding: 16px 38px 20px 7px; margin-top:20px;}
-.main_inner1_content_lt_btm h3              { font-size:20px; color:#454545; font-family: 'Conv_Helvetica-Light';  text-align:center; padding-bottom:16px;}
+/* ERIN MOD TO EXISTING STYLES - LEFT ALIGN PROMO TEXT */
+.main_inner1_content_lt_btm h3              { font-size:20px; color:#454545; font-family: 'Conv_Helvetica-Light';  text-align:left; padding-bottom:16px; padding-left:10px;}
 .main_inner1_content_lt_btm h4              { font-size:12px; color:#454545; font-family: 'Conv_Helvetica-Light'; text-align:right; background:url(../images/plus.jpg) no-repeat left top; display:inline-block; float:right; padding-left:19px;}
 
 .main_inner1_content_lt_btm h4 a            { color:#454545; text-decoration:none;} 
@@ -364,7 +365,8 @@ span.btn11                                 { padding:6px 15px; color:#FFFFFF; cu
 .main_inner7_rt ul li .text2              { width:175px; float:left; display:block; margin-top:10px;} 
 .main_inner7_rt ul li .text2 span         {font-size:12px; color:#454545; font-family:Helvetica, Arial, sans-serif; padding-left:9px; padding-top:5px;} 
 .main_inner7_rt ul li .box4               { width:109px; float:left; display:block; position:relative;margin-top:9px;}
-.main_inner7_rt ul li .box4 input         { background:url(../images/chopse.jpg) no-repeat left top; width:92px; padding-left:6px; vertical-align:central; font-family: Helvetica,Arial,  sans-serif; font-size:12px; color:#454545 !important; vertical-align:middle; display:inline-block;border:none; height:30px; }
+/* ERIN MOD for Button styles on Add Spec Request
+.main_inner7_rt ul li .box4 input         { background:url(../images/chopse.jpg) no-repeat left top; width:92px; padding-left:6px; vertical-align:central; font-family: Helvetica,Arial,  sans-serif; font-size:12px; color:#454545 !important; vertical-align:middle; display:inline-block;border:none; height:30px; }*/
 .main_inner7_rt ul li .text2 .checkbox 			       { height:20px; width:10px; clear:left; float:left; margin:1px 0  0px -8px; padding:0 0 0 11px; background:url(../images/checkbox.png) no-repeat left top; background-repeat:no-repeat;  cursor:default; text-align:left; color:#4d4d4d; font-size:12px;font-family: Helvetica, Arial, sans-serif; display:inline-block; line-height:22px;}
 .main_inner7_rt ul li .text2 .checkbox input 	       { display:none;}
 .main_inner7_rt ul li .text2 .checkbox input.show      { display:inline;}
